--- a/templates/index.html
+++ b/templates/index.html
@@ -10,33 +10,33 @@
     <script type="text/javascript" src="../static/main.js"></script>
 </head>
 
-<body id="bgr">
+<body>
+    <div id="main-page" style="display: 'block';">
+        <ul class="menu-bar">
+            <li type="button" onclick="splist('block','none','none','none');bgrchange(1);">Spotify playlist</li>
+            <li type="button" onclick="splist('none','block','none','none');bgrchange(1);">Spotify song</li>
+            <li type="button" onclick="splist('none','none','block','none');bgrchange(2);">Youtube playlist</li>
+            <li type="button" onclick="splist('none','none','none','block');bgrchange(2);">Youtube vedio</li>
 
-    <ul class="menu-bar">
-        <li type="button" onclick="splist('block','none','none','none');bgrchange(1);">Spotify playlist</li>
-        <li type="button" onclick="splist('none','block','none','none');bgrchange(1);">Spotify song</li>
-        <li type="button" onclick="splist('none','none','block','none');bgrchange(2);">Youtube playlist</li>
-        <li type="button" onclick="splist('none','none','none','block');bgrchange(2);">Youtube vedio</li>
+        </ul>
 
-    </ul>
-    {% if box %}
-    <div class="box">
+        <div class="box">
 
-        <form action="" method="post">
-            <div class="inputBox">
-                <input type="url" name="to-dow-link" required="">
-                <label for="" id="sp-list" style="display:block">Spotify Playlist Url</label>
-                <label for="" id="sp-song" style="display:none">Spotify Song Url</label>
-                <label for="" id="yt-list" style="display:none">Youtube Playlist Url</label>
-                <label for="" id="yt-song" style="display:none">Youtube Song Url</label>
-            </div>
-            <input type="submit" name="" value="Submit">
+            <form action="" method="post" onsubmit="open_load()">
+                <div class="inputBox">
+                    <input type="url" name="to-dow-link" required="">
+                    <label for="" id="sp-list" style="display:block">Spotify Playlist Url</label>
+                    <label for="" id="sp-song" style="display:none">Spotify Song Url</label>
+                    <label for="" id="yt-list" style="display:none">Youtube Playlist Url</label>
+                    <label for="" id="yt-song" style="display:none">Youtube Song Url</label>
+                </div>
+                <input type="submit" name="" value="Submit">
 
-        </form>
+            </form>
 
+        </div>
     </div>
-    {% else %}
-    <div class="loading">
+    <div class="loading" id="load" style="display: none;">
         <table>
             <tr>
                 <td>
@@ -57,7 +57,7 @@
                                     <li>Almost done..</li>
                                 </ul>
                             </div>
-                            <span>1 of {{ songs_number }} </span>
+                            <span>1 of 4 </span>
                         </h4>
                     </div>
                 </td>
@@ -66,8 +66,6 @@
 
 
     </div>
-    {% endif %}
-
 </body>
 
 </html>
