--- a/static/styles.css
+++ b/static/styles.css
@@ -139,7 +139,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 600px;
+  width: 500px;
   padding: 40px;
   background: rgba(0, 0, 0, 0.4);
   box-sizing: border-box;
@@ -348,4 +348,16 @@ body {
   100% {
     margin-top: -270px;
   }
+}
+
+.loading .download-file button {
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 20px;
+  font-size: 14px;
 }
