--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,11 @@
             </tr>
         </table>
 
-
+        <div>
+            <h6>
+                *Converting the playlist may take a while depending on size of your playlist.
+            </h6>
+        </div>
     </div>
 </body>
 
