--- a/templates/download.html
+++ b/templates/download.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles.css">
-    <title>Document</title>
+    <title>Spotify Downloader</title>
+    <link rel="icon" type="image/x-icon" href="../static/images/favicon.ico">
     <script type="text/javascript" src="../static/main.js"></script>
 </head>
 
