--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../static/main.js"></script>
 </head>
 
-<body>
+<body id="bgr">
     <div id="main-page" style="display: 'block';">
         <ul class="menu-bar">
             <li type="button" onclick="splist('block','none','none','none');bgrchange(1);">Spotify playlist</li>
@@ -23,7 +23,7 @@
 
         <div class="box">
 
-            <form action="" method="post" onsubmit="open_load()">
+            <form action="" method="post">
                 <div class="inputBox">
                     <input type="url" name="to-dow-link" required="">
                     <label for="" id="sp-list" style="display:block">Spotify Playlist Url</label>
@@ -37,40 +37,7 @@
 
         </div>
     </div>
-    <div class="loading" id="load" style="display: none;">
-        <table>
-            <tr>
-                <td>
-                    <div class='image'>
-                        <img src="../static/images/XOsX.gif" alt="">
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <h4 class="wordCarousel">
 
-                            <div>
-                                <!-- Use classes 2,3, or 4 to match the number of words -->
-                                <ul class="flip4">
-                                    <li>Converting</li>
-                                    <li>Almost done..</li>
-                                    <li>Converting</li>
-                                    <li>Almost done..</li>
-                                </ul>
-                            </div>
-
-                        </h4>
-                    </div>
-                </td>
-            </tr>
-        </table>
-
-        <div>
-            <h6>
-                *Converting the playlist may take a while depending on size of your playlist.
-            </h6>
-        </div>
-    </div>
 </body>
 
 </html>
