--- a/templates/loading.html
+++ b/templates/loading.html
@@ -8,6 +8,49 @@
     <link rel="stylesheet" href="../static/styles.css">
     <title>Spotify Downloader</title>
     <link rel="icon" type="image/x-icon" href="../static/images/favicon.ico">
+    <script>
+        var id;
+        async function call_songs() {
+            id = parseInt("{{ id }}");
+            await fetch(
+                window.location.origin + '/get_playlist_songs_no', {
+                method: 'POST',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ 'id': id })
+            })
+                .then(res => res.json())
+                .then(async out1 => {
+                    while (out1.songs_number--) {
+                        await fetch(window.location.origin + '/songgs_download', {
+                            method: 'POST',
+                            headers: {
+                                'Accept': 'application/json',
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({ 'id': id, 'song_no': out1.songs_number + 1 })
+                        })
+                            .then(res => res.json())
+                            .then(out => {
+                                if (out.message != "") {
+                                    document.getElementById("track-name").innerHTML = out.message;
+                                }
+                                else {
+                                    document.getElementById("load").style.display = 'none';
+                                    document.getElementById("final-dow").style.display = 'block';
+                                }
+
+                            }
+                            )
+                            .catch(err => 'Something went wrong');
+                    }
+
+                })
+                .catch(err => 'Something went wrong');
+        }
+    </script>
     <script type="text/javascript" src="../static/main.js"></script>
 </head>
 
@@ -69,7 +112,8 @@
             <tr>
                 <td>
                     <div class="download-file">
-                        <a href={{url_for('download_file')}}>
+                        <a href={{ url_for('download_file', id=id) }}>
+
                             <button class="btn">Download</button>
                         </a>
                     </div>
