--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+{% include 'main.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/styles.css">
-    <title>Spotify Downloader</title>
-    <link rel="icon" type="image/x-icon" href="../static/images/favicon.ico">
-    <script type="text/javascript" src="../static/main.js"></script>
-</head>
+{% block body %}
+<div id="main-page" style="display: 'block';">
+    <ul class="menu-bar">
+        <li type="button" onclick="splist(1);">Spotify playlist</li>
+        <li type="button" onclick="splist(2);">Spotify song</li>
+        <li type="button" onclick="splist(3);">Spotify Artist</li>
+        <li type="button" onclick="splist(4);">Spotify Albums</li>
 
-<body id="bgr">
-    <div id="main-page" style="display: 'block';">
-        <ul class="menu-bar">
-            <li type="button" onclick="splist(1);bgrchange(1);">Spotify playlist</li>
-            <li type="button" onclick="splist(2);bgrchange(1);">Spotify song</li>
-            <li type="button" onclick="splist(3);bgrchange(2);">Spotify Artist</li>
-            <li type="button" onclick="splist(4);bgrchange(2);">Youtube vedio</li>
+    </ul>
 
-        </ul>
+    <div class="box">
 
-        <div class="box">
+        <form action="" method="post">
+            <div class="inputBox">
+                <input type="url" name="to-dow-link" required="">
+                <label for="" id="sp-list" style="display:block">Spotify Playlist Url</label>
+            </div>
+            <input type="submit" name="" value="Submit">
 
-            <form action="" method="post">
-                <div class="inputBox">
-                    <input type="url" name="to-dow-link" required="">
-                    <label for="" id="sp-list" style="display:block">Spotify Playlist Url</label>
-                </div>
-                <input type="submit" name="" value="Submit">
+        </form>
 
-            </form>
-
-        </div>
     </div>
+</div>
 
-</body>
 
-</html>
+{% endblock %}
