--- a/templates/loading.html
+++ b/templates/loading.html
@@ -1,137 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
+{% include 'main.html' %}
+{% block body %}
+<div class="loading" id="load" style="display: block;">
+    <table>
+        <tr>
+            <td>
+                <div class='image'>
+                    <img src="../static/images/XOsX.gif" alt="">
+                </div>
+            </td>
+            <td>
+                <div>
+                    <h4 class="wordCarousel">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/styles.css">
-    <title>Spotify Downloader</title>
-    <link rel="icon" type="image/x-icon" href="../static/images/favicon.ico">
-    <script>
-        var id;
-        async function call_songs() {
-            id = parseInt("{{ id }}");
-            await fetch(
-                window.location.origin + '/get_playlist_songs_no', {
-                method: 'POST',
-                headers: {
-                    'Accept': 'application/json',
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ 'id': id })
-            })
-                .then(res => res.json())
-                .then(async out1 => {
-                    while (out1.songs_number--) {
-                        await fetch(window.location.origin + '/songgs_download', {
-                            method: 'POST',
-                            headers: {
-                                'Accept': 'application/json',
-                                'Content-Type': 'application/json'
-                            },
-                            body: JSON.stringify({ 'id': id, 'song_no': out1.songs_number + 1 })
-                        })
-                            .then(res => res.json())
-                            .then(out => {
-                                if (out.message != "") {
-                                    document.getElementById("track-name").innerHTML = out.message;
-                                }
-                                else {
-                                    document.getElementById("load").style.display = 'none';
-                                    document.getElementById("final-dow").style.display = 'block';
-                                }
+                        <div>
+                            <!-- Use classes 2,3, or 4 to match the number of words -->
+                            <ul class="flip4">
+                                <li>Converting</li>
+                                <li>Almost done..</li>
+                                <li>Converting</li>
+                                <li>Almost done..</li>
+                            </ul>
+                        </div>
 
-                            }
-                            )
-                            .catch(err => 'Something went wrong');
-                    }
-
-                })
-                .catch(err => 'Something went wrong');
-        }
-    </script>
-    <script type="text/javascript" src="../static/main.js"></script>
-</head>
-
-<body onload="call_songs()">
-    <div class="loading" id="load" style="display: block;">
-        <table>
-            <tr>
-                <td>
-                    <div class='image'>
-                        <img src="../static/images/XOsX.gif" alt="">
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <h4 class="wordCarousel">
-
-                            <div>
-                                <!-- Use classes 2,3, or 4 to match the number of words -->
-                                <ul class="flip4">
-                                    <li>Converting</li>
-                                    <li>Almost done..</li>
-                                    <li>Converting</li>
-                                    <li>Almost done..</li>
-                                </ul>
-                            </div>
-
-                        </h4>
-                    </div>
-                </td>
-            </tr>
-        </table>
-        <div>
-            <h4 id="track-name" style="font-weight:50;color: #eee;">
-                working on it...
-            </h4>
-        </div>
-        <div>
-            <h6>
-                *Converting the playlist may take a while depending on size of your playlist.
-            </h6>
-        </div>
-    </div>
-    <div class="loading" id="final-dow" style="display: none;">
-
-        <h4 class="wordCarousel">
-
-            <div>
-                <!-- Use classes 2,3, or 4 to match the number of words -->
-                <ul class="flip4">
-                    <li>Download Completed</li>
-                    <li>Enjoy</li>
-                    <li>Download Completed</li>
-                    <li>Enjoy</li>
-                </ul>
-            </div>
-
+                    </h4>
+                </div>
+            </td>
+        </tr>
+    </table>
+    <div>
+        <h4 id="track-name" style="font-weight:50;color: #eee;">
+            working on it...
         </h4>
-        <table>
-            <tr>
-                <td>
-                    <div class="download-file">
-                        <a href={{ url_for('download_file', id=id) }}>
-
-                            <button class="btn">Download</button>
-                        </a>
-                    </div>
-                </td>
-                <td>
-                    <div class="download-file" style="right: 20px;">
-
-                        <button class="btn" onclick="location.href=window.location.origin">Back to home page</button>
-
-                    </div>
-                </td>
-            </tr>
-        </table>
-
-
-
-
     </div>
-</body>
+    <div>
+        <h6>
+            *Converting the playlist may take a while depending on size of your playlist.
+        </h6>
+    </div>
+</div>
+<div class="loading" id="final-dow" style="display: none;">
 
-</html>
+    <h4 class="wordCarousel">
+
+        <div>
+            <!-- Use classes 2,3, or 4 to match the number of words -->
+            <ul class="flip4">
+                <li>Download Completed</li>
+                <li>Enjoy</li>
+                <li>Download Completed</li>
+                <li>Enjoy</li>
+            </ul>
+        </div>
+
+    </h4>
+    <table>
+        <tr>
+            <td>
+                <div class="download-file">
+                    <a href={{ url_for('download_file', id=id) }}>
+
+                        <button class="btn">Download</button>
+                    </a>
+                </div>
+            </td>
+            <td>
+                <div class="download-file" style="right: 20px;">
+
+                    <button class="btn" onclick="location.href=window.location.origin">Back to home page</button>
+
+                </div>
+            </td>
+        </tr>
+    </table>
+</div>
+<script type="text/javascript">
+    var id = parseInt("{{ id }}");
+    window.onload = function () {
+        aTestFunction(id);
+    };
+</script>
+{% endblock %}
