added link alert

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,12 @@
 
     <div class="box">
 
-        <form action="" method="post">
+        <form action="" method="post" id="form">
             <div class="inputBox">
                 <input type="url" name="to-dow-link" required="">
                 <label for="" id="sp-list" style="display:block">Spotify Playlist Url</label>
             </div>
-            <input type="submit" name="" value="Submit">
+            <input type="submit" name="" value="Submit" onclick="return check_form_link()">
 
         </form>
 
