added the front page and pushed to check the mob

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,21 @@
 
 {% block body %}
 <div id="main-page" style="display: 'block';">
-    <ul class="menu-bar">
-        <li type="button" onclick="splist(1);">Spotify playlist</li>
-        <li type="button" onclick="splist(2);">Spotify song</li>
-        <li type="button" onclick="splist(3);">Spotify Artist</li>
-        <li type="button" onclick="splist(4);">Spotify Albums</li>
-
+    <ul class="menu-bar" id="for-pc" style="display: block;">
+        <div style="display: inline-flex;">
+            <li type="button" onclick="splist(1);">Spotify playlist</li>
+            <li type="button" onclick="splist(2);">Spotify song</li>
+            <li type="button" onclick="splist(3);">Spotify Artist</li>
+            <li type="button" onclick="splist(4);">Spotify Albums</li>
+        </div>
+    </ul>
+    <ul class="menu-bar" id="for-mob" style="display: none;">
+        <div style="display: inline-flex;">
+            <li type="button" onclick="splist(1);">Spotify playlist</li>
+            <li type="button" onclick="splist(2);">Spotify song</li>
+            <li type="button" onclick="splist(3);">Spotify Artist</li>
+            <li type="button" onclick="splist(4);">Spotify Albums</li>
+        </div>
     </ul>
 
     <div class="box">
@@ -23,6 +32,14 @@
 
     </div>
 </div>
+<script type="text/javascript">
+
+    window.onload = function () {
+
+        bgrchange("{{ mode }}");
+        isMobile();
+    };
+</script>
 
 
 {% endblock %}
