--- a/static/styles.css
+++ b/static/styles.css
@@ -5,13 +5,16 @@ body {
   display: flex;
   justify-content: center;
 }
-
+.logo img {
+  position: fixed;
+  left: 0;
+  top: 0;
+}
 .menu-bar {
   border-radius: 25px;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  display: inline-flex;
   background-color: rgba(0, 0, 0, 0.4);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
