--- a/templates/main.html
+++ b/templates/main.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles.css">
-    <title>Spotify Downloader</title>
+    <title>Spoti-Tube Downloader</title>
     <link rel="icon" type="image/x-icon" href="../static/images/favicon.ico">
     <script type="text/javascript" src="../static/main.js"></script>
 </head>
 
 <body id="bgr">
+
     {% block body %}
 
 
