--- a/static/styles.css
+++ b/static/styles.css
@@ -10,6 +10,23 @@ body {
   left: 0;
   top: 0;
 }
+@media screen and (max-width: 600px) {
+  div.for-mob {
+    display: block;
+  }
+  div.for-pc {
+    display: none;
+  }
+}
+@media screen and (min-width: 601px) {
+  div.for-mob {
+    display: none;
+  }
+  div.for-pc {
+    display: block;
+  }
+}
+
 .menu-bar {
   border-radius: 25px;
   height: -webkit-fit-content;
