added the youtube playlist option

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
         <ul class="menu-bar">
 
             <div style="display: inline-flex;">
-                <li type="button" onclick="splist(1);">Spotify playlist</li>
-                <li type="button" onclick="splist(2);">Spotify song</li>
-                <li type="button" onclick="splist(3);">Spotify Artist</li>
-                <li type="button" onclick="splist(4);">Spotify Albums</li>
+                <li type="button" id="playlist" onclick="splist(1);">Spotify playlist</li>
+                <li type="button" id="track" onclick="splist(2);">Spotify song</li>
+                <li type="button" id="artist" onclick="splist(3);">Spotify Artist</li>
+                <li type="button" id="albums" onclick="splist(4);">Spotify Albums</li>
             </div>
         </ul>
     </div>
@@ -17,14 +17,14 @@
         <ul class="menu-bar">
 
             <div style="display: inline-flex;">
-                <li type="button" onclick="splist(1);">Spotify playlist</li>
-                <li type="button" onclick="splist(2);">Spotify song</li>
+                <li type="button" id="playlist" onclick="splist(1);">Spotify playlist</li>
+                <li type="button" id="track" onclick="splist(2);">Spotify song</li>
             </div>
         </ul>
         <ul class="menu-bar">
             <div style="display: inline-flex;">
-                <li type="button" onclick="splist(3);">Spotify Artist</li>
-                <li type="button" onclick="splist(4);">Spotify Albums</li>
+                <li type="button" id="artist" onclick="splist(3);">Spotify Artist</li>
+                <li type="button" id="albums" onclick="splist(4);">Spotify Albums</li>
             </div>
         </ul>
     </div>
