--- a/static/styles.css
+++ b/static/styles.css
@@ -152,24 +152,45 @@ body {
     width: 80%;
   }
 }
-
-.loading {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 500px;
-  padding: 40px;
-  background: rgba(0, 0, 0, 0.4);
-  box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
+@media screen and (min-width: 601px) {
+  .loading {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    padding: 40px;
+    background: rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+  }
+  .loading .image img {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+  }
 }
-.loading .image img {
-  width: 100px;
-  height: 100px;
-  margin: 0 auto;
+@media screen and (max-width: 600px) {
+  .loading {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    padding: 40px;
+    background: rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+  }
+  .loading .image img {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+  }
 }
 
 /*-----------text --------------*/
