--- a/templates/loading.html
+++ b/templates/loading.html
@@ -75,8 +75,9 @@
 </div>
 <script type="text/javascript">
     var id = parseInt("{{ id }}");
+    var typee = "{{ type }}";
     window.onload = function () {
-        aTestFunction(id);
+        aTestFunction(id, typee);
     };
 </script>
 {% endblock %}
